# beetle

./: .gitignore  README.md  beetle.xcf  cj
beetle-judge/: Cargo.toml  executor  executor.c  lang.yaml
beetle-judge/src/: main.rs  sandbox.rs  settings.rs  submission.rs  tests.rs  worker_pool.rs
judge/: .gitignore  Cargo.toml  Dockerfile  Makefile  build.sh  executor.c  lang.yaml
judge/src/: main.rs  sandbox.rs  settings.rs  submission.rs
texturu/: .gitignore  beetle.tex  database-schema.drawio  kommentarer-felix
website/: .gitignore  README.md  cookie-jar  package-lock.json  package.json  rollup.config.js
website/src/: credentials.json  cryptoken.js  database.js  depthify.js  judge.js  message-store.js  responses.js  server.js  service-worker.js  template.html  tokens.js  util.js
website/src/components/: ColorButton.svelte  Header.svelte  Menu.svelte  MessageViewer.svelte  PieChart.svelte  Status.svelte
website/src/routes/: _error.svelte  _layout.svelte  index.svelte  is-logged-in.json.js  login.json.js  login.svelte  ranklist.json.js  ranklist.svelte  register.json.js  register.svelte  supported-languages.json.js
website/src/routes/account/: [username].json.js  change-email.json.js  change-password.json.js  index.json.js  index.svelte  logout.json.js  submissions.json.js
website/src/routes/problems/: [problem].json.js  _sanitize-html.js  create-new.json.js  create-new.svelte  index.json.js  index.svelte
website/src/routes/submissions/: index.json.js  index.svelte
website/static/: global.css  manifest.json
🎁/: presentation
(+10 files in other folders)
