[package]
name = "beetle-judge"
version = "0.1.0"
authors = ["mathiasmagnusson <mathiasmagnussons@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
